# ultrasonic

./: .gitignore  .markdownlint.json  CHANGELOG.md  MANIFEST.in  README.md  SPARC-DEVELOPMENT-GUIDE.md  SPARC-QUICK-REFERENCE.md  pyproject.toml  setup.py
coordination/: COORDINATION_GUIDE.md
coordination/memory_bank/: calibration_values.md  test_failures.md
coordination/orchestration/: agent_assignments.md  integration_plan.md  progress_tracker.md
coordination/subtasks/: task_001_calibration.md  task_002_ffmpeg.md  task_003_optimization.md
docs/review/: comprehensive-system-review.md
examples/: README.md  ULTRASONIC_EMBEDDING_GUIDE.md  check_embedded_commands.py  check_ultrasonic_frequencies.py  debug_decode_trace.py  debug_detailed_decode.py  debug_embedding.py  debug_preamble_position.py  fix_embedding_amplitude.py  test_hello_world.py  test_ultrasonic_embedding.py  test_wav_vs_mp3.py
memory_bank/: README.md
memory_bank/development_patterns/: mcp_patterns.md  testing_strategies.md
memory_bank/integration_notes/: agentic_commands_stego.md
memory_bank/lessons_learned/: development_insights.md
memory_bank/project_context/: architecture_decisions.md  project_overview.md
memory_bank/sparc_methodology/: quality_standards.md  sparc_phases.md
memory_bank/technical_decisions/: tool_selection.md
src/: README.md  __init__.py  requirements.txt  simple_test.py  test_mcp_cli.py  test_mcp_integration.py  working_test.py
src/crypto/: __init__.py  cipher.py
src/decode/: __init__.py  audio_decoder.py  ultrasonic_decoder.py  video_decoder.py
src/docs/: README.md  advanced-usage.md  api-complete.md  api-reference.md  architecture.md  cli-usage.md  deployment.md  developer-guide.md  fastmcp-integration-plan.md  index.md  installation.md  mcp-integration.md  security.md  troubleshooting.md  user-guide.md
src/embed/: __init__.py  audio_embedder.py  ultrasonic_encoder.py  video_embedder.py
src/examples/: README.md  api_client.py  audio_file_processing.py  basic_encoding.py
src/mcp_tools/: __init__.py  cli.py  server.py
src/mcp_tools/schemas/: __init__.py  config.py  decode.py  embed.py
src/mcp_tools/tools/: __init__.py  config_tools.py  decode_tools.py  embed_tools.py
src/server/: __init__.py  api.py
src/tests/: TEST_ANALYSIS.md  __init__.py  conftest.py  test_api_endpoints.py  test_calibration.py  test_cipher.py  test_enhanced_error_correction.py  test_integration.py  test_minimal_integration.py  test_simple_calibration.py  test_ultrasonic_decoder.py  test_ultrasonic_encoder.py
ui/: .env.development  .env.example  README.md  UI_COORDINATION_GUIDE.md  index.html  modern-saas-inline-css-patterns.html  package-lock.json  package.json  tsconfig.app.json
ui/coordination/: implementation-roadmap.md
ui/coordination/components/: audio-controls.md  decoding-panel.md  encoding-panel.md  waveform-display.md
ui/coordination/design/: component-architecture.md  data-flow.md  state-management.md  theme-system.md  ui-patterns.md
ui/coordination/features/: api-integration.md  file-processing.md  real-time-encoding.md  signal-analysis.md
ui/coordination/integration/: api-contracts.md  data-models.md  error-handling.md  websocket-events.md
ui/src/: App.tsx  index.css
ui/src/components/audio/: AudioDeviceSelector.tsx  AudioPlayer.tsx  AudioRecorder.tsx  README.md  index.ts
ui/src/components/audio/__tests__/: AudioDeviceSelector.test.tsx  AudioPlayer.test.tsx  AudioRecorder.test.tsx
ui/src/components/auth/: ProtectedRoute.tsx
ui/src/components/decoding/: AudioUploader.tsx  DecodingPanel.tsx  DecodingProgress.tsx  DecodingResults.tsx  DecodingSettings.tsx  index.ts
ui/src/components/encoding/: AudioSourceSelector.tsx  EncodingPanel.tsx  EncodingProgress.tsx  EncodingSettings.tsx  MessageInput.tsx
ui/src/components/layouts/: AuthLayout.tsx  DashboardLayout.tsx
ui/src/components/providers/: WebSocketProvider.tsx  index.ts
ui/src/components/ui/: InlineStyledButton.tsx  README-inline-styles.md  button.tsx  card.tsx
ui/src/components/ui/__tests__/: button.test.tsx
ui/src/hooks/: useAudioEncoding.ts  useButtonState.ts  useWebSocket.ts
ui/src/mocks/: handlers.ts
ui/src/pages/: WelcomePage.tsx
ui/src/pages/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  ModernLoginPage.tsx  RegisterPage.tsx
ui/src/pages/dashboard/: AnalyzePage.tsx  DashboardPage.tsx  DecodePage.tsx  EmbedPage.tsx  HistoryPage.tsx  ModernDashboardPage.tsx
ui/src/pages/demo/: AudioComponentsDemo.tsx  InlineStylesDemo.tsx  ResponsiveLayoutDemo.tsx
ui/src/pages/help/: ApiDocsPage.tsx  FaqPage.tsx  HelpPage.tsx  TutorialsPage.tsx
ui/src/pages/settings/: PreferencesPage.tsx  ProfilePage.tsx  SecurityPage.tsx  SettingsPage.tsx
ui/src/stores/: audioStore.ts  auth-store.ts  decodingStore.ts  encodingStore.ts  index.ts  uiStore.ts  websocketStore.ts
ui/src/styles/: README.md  examples.tsx  responsiveStyles.ts  useMediaQuery.ts
ui/src/types/: api.ts  auth.ts
